@@ -76,8 +76,13 @@ if [ $VERSION -eq 1 ]; then
 	exit 0
 fi
 
-export LD_LIBRARY_PATH="${APPDIR}/usr/lib:${LD_LIBRARY_PATH}"
 export PATH="${APPDIR}/usr/bin:${PATH}"
+
+if [ "${LD_LIBRARY_PATH}" = "" ]; then
+	export LD_LIBRARY_PATH="${APPDIR}/usr/lib"
+else
+	export LD_LIBRARY_PATH="${APPDIR}/usr/lib:${LD_LIBRARY_PATH}"
+fi
 
 if [ "$PGHOST" = "" ]; then
 	export PGHOST="/tmp,/var/run/postgresql"
