@@ -1,3 +1,7 @@
+vX.Y.Z (YYYY-MM-DD)
+
+- AppImage checks for existing LD_LIBRARY_PATH before updating
+
 v0.53.0 (2023-05-17)
 
 - Add "report" script to handle both post-process and generate-report scripts
